--- a/src/buckstore.auth.service.infrastructure.CrossCutting.IoC/buckstore.auth.service.infrastructure.CrossCutting.IoC.csproj
+++ b/src/buckstore.auth.service.infrastructure.CrossCutting.IoC/buckstore.auth.service.infrastructure.CrossCutting.IoC.csproj
@@ -7,12 +7,16 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="9.0.0" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+        <PackageReference Include="MassTransit.AspNetCore" Version="7.2.1" />
+        <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.1" />
+        <PackageReference Include="MassTransit.Kafka" Version="7.2.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
     </ItemGroup>
     
     <ItemGroup>
       <ProjectReference Include="..\buckstore.auth.service.application\buckstore.auth.service.application.csproj" />
       <ProjectReference Include="..\buckstore.auth.service.environment\buckstore.auth.service.environment.csproj" />
+      <ProjectReference Include="..\buckstore.auth.service.infrastructure.bus\buckstore.auth.service.infrastructure.bus.csproj" />
       <ProjectReference Include="..\buckstore.auth.service.infrastructure.Data\buckstore.auth.service.infrastructure.Data.csproj" />
     </ItemGroup>
     
